--- a/src/sass/components/_savannah-preloader.scss
+++ b/src/sass/components/_savannah-preloader.scss
@@ -23,6 +23,12 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
 
 .preloader__conatiner {
   margin-top: 70px;
+  @include media-mobile {
+    margin-top: 0;
+  }
+  @include media-tablet {
+    margin-top: 0;
+  }
 }
 
 .preloader {
@@ -43,6 +49,9 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
 
     text-align: center;
     color: $text-color;
+    @include media-mobile {
+      margin-top: 0;
+    }
   }
 }
 
@@ -60,6 +69,7 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
     border-radius: 50%;
 
 @include anim();
+
     &:before {
       content: "";
 
@@ -69,10 +79,10 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
       background-color: nth($color, $i);
       border-radius: 50%;
       transform: scale(1);
-      opacity: 0.7;
+      opacity: .7;
 
-      transition: 0.5s all ease;
-      animation: scale 2s infinite cubic-bezier(0, 0, 0.49, 1.02);
+      transition: .5s all ease;
+      animation: scale 2s infinite cubic-bezier(0, 0, .49, 1.02);
       animation-delay: 200ms * $i;
     }
   }
@@ -93,4 +103,17 @@ $color: $color-1, $color-2, $color-3, $color-4, $color-5;
   width: 30px;
   margin: 0 auto;
   margin-bottom: 10px;
+}
+
+.current-level {
+  position: absolute;
+  top: -100px;
+  left: 50%;
+
+  margin-top: 20px;
+  margin-left: -85px;
+
+  font-size: 3rem;
+  text-align: center;
+  color: #ffffff;
 }
