--- a/src/sass/components/_savannah-rating.scss
+++ b/src/sass/components/_savannah-rating.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   width: 100%;
-  height: 100px;
+  height: 120px;
 }
 
 .rating__row {
@@ -15,12 +15,28 @@
   position: absolute;
   top: 20px;
   right: 0;
+
+@include media-mobile {
+    position: relative;
+    top: 0;
+
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
 
 .rating__round {
   position: absolute;
   top: 70px;
   right: 0;
+
+@include media-mobile {
+    position: relative;
+    top: 25px;
+
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
 
 .text {
@@ -37,8 +53,21 @@
   color: $text-color;
 
   opacity: .8;
+
+@include media-mobile {
+    top: 25px;
+    right: 0;
+
+    width: 100%;
+
+    text-align: center;
+  }
   &_round {
     top: 95px;
+
+@include media-mobile {
+      top: 75px;
+    }
   }
 }
 
