--- a/src/sass/layouts/_gameStatModal.scss
+++ b/src/sass/layouts/_gameStatModal.scss
@@ -4,25 +4,36 @@
   left: 50%;
   z-index: 99;
 
-// display: flex;
-
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
   width: 100%;
   max-width: 784px;
-
-// max-height: 100vh;
-  height: 100%;
+  max-height: 100%;
   margin: 0 auto;
   margin-left: -370px;
   padding: 42px 16px;
+  overflow: auto;
 
   text-align: center;
 
   background-color: #ffffff;
   border: 1px solid #e6e9ee;
   border-radius: 8px;
+
+@include media-tablet {
+    left: -4px;
+
+    max-width: 100%;
+    margin: 0;
+  }
+
+@include media-mobile {
+    left: 0;
+
+    max-width: 405px;
+    margin: 0;
+  }
 }
 
 .statistics {
@@ -31,6 +42,10 @@
     font-size: 25px;
     line-height: .85;
     color: #37383c;
+
+@include media-mobile {
+      font-size: 15px;
+    }
   }
   &__words-set {
     position: relative;
@@ -40,7 +55,7 @@
     align-items: center;
     width: 100%;
     max-width: 550px;
-    max-height: 286px;
+    max-height: 62vh;
     margin: 0 auto;
     margin-top: 20px;
     overflow: auto;
@@ -62,6 +77,8 @@
     }
   }
   &__continue {
+    width: 200px;
+    margin: 0 auto;
     margin-top: 24px;
     padding: 10px 42px;
 
@@ -74,6 +91,13 @@
     background-color: $main-color;
     border-radius: 4px;
     cursor: pointer;
+
+@include media-mobile {
+      width: 170;
+
+      font-size: 12px;
+    }
+
     &:hover {
       color: $main-color;
 
@@ -92,6 +116,12 @@
     text-decoration: underline;
 
     cursor: pointer;
+
+@include media-mobile {
+      margin-top: 0;
+
+      font-size: 10px;
+    }
   }
 }
 
@@ -112,6 +142,10 @@
   margin-right: 10px;
 
   line-height: 0;
+
+@include media-mobile {
+    width: 20px;
+  }
 }
 
 .word-eng {
@@ -128,6 +162,10 @@
   word-break: normal;
 
   cursor: pointer;
+
+@include media-mobile {
+    font-size: 9px;
+  }
 }
 
 .word-trans {
@@ -142,11 +180,21 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: normal;
+
+@include media-mobile {
+    font-size: 9px;
+  }
 }
 
 .wrong_title,
 .correct_title {
   font-weight: 700;
+}
+
+.word-audio {
+  width: 100%;
+
+  cursor: pointer;
 }
 
 
