--- a/src/sass/layouts/_savannah-layout.scss
+++ b/src/sass/layouts/_savannah-layout.scss
@@ -1,6 +1,5 @@
 .app {
   position: relative;
-  // min-height: 100vh;
 
   width: 100%;
 }
@@ -15,6 +14,16 @@
 
   font-size: 2em;
   color: $text-color;
+
+@include media-mobile {
+    left: -6px;
+
+    width: 100%;
+    margin-left: 0;
+
+    font-size: 1em;
+  }
+
   &_hide {
     display: none;
   }
@@ -31,7 +40,16 @@
 
   font-size: 1.5em;
   color: $text-color;
-  ;
+
+@include media-mobile {
+    top: 0;
+
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 1em;
+  }
+
   span {
     display: flex;
     justify-content: center;
@@ -41,6 +59,10 @@
     margin-right: 20px;
 
     cursor: pointer;
+
+@include media-mobile {
+      width: 100%;
+    }
 
     &:hover {
       color: white;
@@ -65,8 +87,18 @@ span .keyboard-num {
 
   width: 30px;
   margin-left: -20px;
+
+@include media-mobile {
+    bottom: 30px;
+  }
+
+@include media-tablet {
+    bottom: 35px;
+  }
+
   &__img {
     width: 100%;
+    height: 100%;
 
     animation: mover 1s infinite  alternate;
 
@@ -114,6 +146,6 @@ span .keyboard-num {
   background: $text-color;
 }
 
-.noHover{
+.noHover {
   pointer-events: none;
 }
