--- a/src/sass/layouts/_savannah-startPage.scss
+++ b/src/sass/layouts/_savannah-startPage.scss
@@ -4,10 +4,28 @@
   right: 0;
   left: 0;
 
+  max-width: 100vw;
   height: 300px;
   margin-top: -150px;
 
   text-align: center;
+
+@include media-laptop {
+    top: 80%;
+
+    width: 100%;
+    max-height: 100vh;
+  }
+
+@include media-mobile {
+    top: 70%;
+  }
+
+  @include media-tablet {
+    top: 70%;
+    margin-bottom: 0;
+  }
+
   &__title {
     margin-bottom: 60px;
 
@@ -18,7 +36,11 @@
     text-transform: uppercase;
     letter-spacing: 13px;
 
-    opacity: 0.8;
+    opacity: .8;
+
+@include media-mobile {
+      margin-bottom: 15px;
+    }
   }
   &__text {
     max-width: 565px;
@@ -29,6 +51,13 @@
     line-height: 24px;
     color: $text-color;
 
-    opacity: 0.8;
+    opacity: .8;
+
+@include media-mobile {
+      margin-bottom: 15px;
+    }
+@include media-tablet {
+      margin-bottom: 0;
+    }
   }
 }
