--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 // pages
 
 // savannah-game
+@import "components/savannah-media";
 @import "abstract/savannah-constants";
 @import "components/savannah-button";
 @import "components/savannah-closeBtn";
