feat: add show a hit of answer

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -5,3 +5,6 @@ $color-menu-elements-hover: #ffffff;
 $color-navigation-background: #65c3ba;
 $color-navigation-link-active: #63410f;
 $color-modal-settings: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+$color-incorrect-low: orange;
+$color-incorrect-heavy: red;
+$color-letter: green;
