--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,3 +38,9 @@
 @import "layouts/savannah-startPage";
 @import "layouts/savannah-layout";
 @import "components/savannah-sparkles";
+
+// english-puzzle
+@import "layouts/englishPuzzle-layout";
+@import "components/englishPuzzle-buttons";
+@import "layouts/englishPuzzle-modal";
+@import "layouts/englishPuzzle-startLayout";
