--- a/src/sass/layouts/_englishPuzzle-startLayout.scss
+++ b/src/sass/layouts/_englishPuzzle-startLayout.scss
@@ -1,64 +1,78 @@
 .ep__startButton {
-  width: 15rem;
-  height: 6.4rem;
-  font-family: inherit;
-  font-size: 2rem;
-  letter-spacing: .5rem;
-  border-radius: 1rem;
-  font-weight: 100;
-  background-color: #1c283b;
-  text-transform: uppercase;
-  color: #fff;
   position: relative;
   left: 50%;
-  transform: translate(-50%, 0);
+
+  width: 15rem;
+  height: 6.4rem;
   margin-top: 1rem;
-  border: 1px solid #fff;
+
+  font-weight: 100;
+  font-size: 2rem;
+  font-family: inherit;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: .5rem;
+
+  background-color: #1c283b;
+  border: 1px solid #ffffff;
+  border-radius: 1rem;
+  transform: translate(-50%, 0);
   cursor: pointer;
   &:hover {
-    border: 1px solid #00c49d;
-    background-color: #273853;
     color: #00c49d;
-    transition: 0.3s ease-in-out;
+
+    background-color: #273853;
+    border: 1px solid #00c49d;
+
+    transition: .3s ease-in-out;
   }
 }
 
 .ep-startScreen {
   position: relative;
+
   width: 100%;
-  &__header{
+  &__header {
     position: sticky;
     top: 0;
     z-index: 1;
+
     display: flex;
     justify-content: center;
     height: 46px;
+    margin-top: 2rem;
     padding: 0 20px;
-    transition: background-color 0.2s cubic-bezier(0, -1.85, 0.27, 1.75);
+
+    transition: background-color .2s cubic-bezier(0, -1.85, .27, 1.75);
   }
   &__container {
     max-width: 100vw;
     max-height: 300px;
     margin-top: 12%;
+
     text-align: center;
   }
   &__title {
     margin-bottom: 60px;
+
     font-weight: 300;
     font-size: 3.2rem;
     line-height: 1;
     color: white;
     text-transform: uppercase;
     letter-spacing: 13px;
-    opacity: 0.8;
+
+    opacity: .8;
   }
   &__description {
     max-width: 565px;
     margin: 0 auto 60px;
+
     font-weight: 300;
     font-size: 1.8rem;
     line-height: 24px;
-    color: #fff;
+    color: #ffffff;
+
     opacity: .8;
   }
   &__buttons {
@@ -70,18 +84,23 @@
   position: absolute;
   top: 5px;
   right: 10px;
+
   width: 32px;
   height: 32px;
-  opacity: 0.3;
-  &:before, &:after {
+
+  opacity: .3;
+  &:before,
+  &:after {
     content: " ";
     position: absolute;
     left: 15px;
+
     width: 2px;
     height: 33px;
+
     background-color: white;
   }
-  &:before{
+  &:before {
     transform: rotate(45deg);
   }
   &:after {
@@ -89,10 +108,12 @@
   }
   &:hover {
     opacity: 1;
-    transition: 0.3s ease-in-out;
+
+    transition: .3s ease-in-out;
   }
   &_app {
     position: relative;
+
     margin-left: 20px;
   }
 }
