--- a/src/sass/components/speak_it/speak_it-inner_container.scss
+++ b/src/sass/components/speak_it/speak_it-inner_container.scss
@@ -1,70 +1,81 @@
 @import "speak_it-constants";
-.translation{
-    margin: 12px auto;
-    height: 24px;
-    color: #f8e7e7;
-    text-shadow: 0 1px 1px #888787;
-    font: bold 24px arial, helvetica, sans-serif;
-    line-height: 24px;
-    border-bottom: 1px solid black;
-    @extend %box_shadow;
-    width: max-content;
+.translation {
+  width: max-content;
+  height: 24px;
+  margin: 24px auto 25px;
+
+  font: bold 24px arial, helvetica, sans-serif;
+  line-height: 24px;
+  color: #f8e7e7;
+  text-shadow: 0 1px 1px #888787;
+
+  border-bottom: 1px solid black;
+
+@extend %box_shadow;
 }
-.inner_container{
-    display: flex;
-    width: 27vw;
-    margin: auto;
+.inner_container {
+  display: flex;
+  width: 27vw;
+  margin: 5px auto;
 }
-.icon{
-    width: 40px;
-    height: 33px;
-    background-size: 33px;
-    background-repeat: no-repeat;
-    cursor: pointer;
+.icon {
+  width: 40px;
+  height: 33px;
+
+  background-repeat: no-repeat;
+  background-size: 33px;
+  cursor: pointer;
 }
-.mic{
-    background-image: url(../assets/svg/mic1.png);
+.mic {
+  background-image: url(../assets/svg/mic1.png);
 }
-.mic:hover{
-    background-image: url(../assets/svg/mic2.png);
+.mic:hover {
+  background-image: url(../assets/svg/mic2.png);
 }
-.clear{
-    background-image: url(../assets/svg/clear1.png);
+.mic_active {
+  background-image: url(../assets/svg/mic3.png)!important;
 }
-.clear:hover{
-    background-image: url(../assets/svg/clear2.png);
+.clear {
+  background-image: url(../assets/svg/clear1.png);
 }
-.inner{
-    margin: 13px auto;
-    width: 22vw;
-    height: 22px;
-    display: block;
-    border: 0;
-    max-width: 1140px; 
-    text-align: center;
-    text-shadow: 0 1px 1px $color_shadow;
-    @extend %text;
-    border-bottom: 1px solid black;
-    @extend %box_shadow;
+.clear:hover {
+  background-image: url(../assets/svg/clear2.png);
 }
-.not_display{
-    display: none!important;
+.inner {
+  display: block;
+  width: 22vw;
+  max-width: 1140px;
+  height: 22px;
+  margin: 13px auto;
+
+  text-align: center;
+  text-shadow: 0 1px 1px $color_shadow;
+
+  border: 0;
+  border-bottom: 1px solid black;
+
+@extend %text;
+
+@extend %box_shadow;
+}
+.not_display {
+  display: none!important;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 600px) {
-    .inner_container{
-        width: 60vw;
-    }
-    .inner{
-        width: 50vw;
-    }
+  .inner_container {
+    width: 60vw;
+  }
+  .inner {
+    width: 50vw;
+  }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 1000px) {
-    .inner_container{
-        width: 40vw;
-    }
-    .inner{
-        width: 35vw;
-    }
+  .inner_container {
+    width: 40vw;
+  }
+  .inner {
+    width: 35vw;
+  }
 }
