--- a/src/sass/components/speak_it/speak_it-main_container.scss
+++ b/src/sass/components/speak_it/speak_it-main_container.scss
@@ -1,76 +1,102 @@
 @import "speak_it-constants";
-.image{
-    width: 423px;
-    height: 283px;
-    margin: 0 auto;
-    background-position: center;
-    background-size: 423px 283px;
-    border-radius: 15px;
+.image {
+  width: 423px;
+  height: 283px;
+  margin: 0 auto;
+
+  background-position: center;
+  background-size: 423px 283px;
+  border-radius: 15px;
 }
 .container_over {
-	max-width: 450px;
-	height: 300px;
-	background: transparent;
-    margin: auto;
+  max-width: 450px;
+  height: 300px;
+  margin: auto;
+
+  background: transparent;
 }
 .card_over {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: all 0.6s ease;
-  }
+  position: relative;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  transform-style: preserve-3d;
+
+  transition: all .6s ease;
+}
 .card_over .front {
-    position: absolute;
-    margin-top: 10px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 95%;
+  margin-top: 10px;
+  overflow: hidden;
+
+  backface-visibility: hidden;
 }
 
 .card_over .back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-      border-radius: 8px;
-    backface-visibility: hidden;
-    overflow: hidden;
-    text-align: center;
-    transform: rotateY(180deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  text-align: center;
+
+  border-radius: 8px;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
 }
 .rotate {
-      transform: rotateY(180deg);
-  }
+  transform: rotateY(180deg);
+}
 .content {
-      display: flex;
-      flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .content span {
-	margin-top: 50px;
-	text-decoration: underline;
+  margin-top: 50px;
+
+  text-decoration: underline;
 }
-.examples, .tanslations{
-    @extend %text;
-    transition: background-color .5s ease-out;
-    color: $color_text_hover;
+.examples,
+.tanslations {
+  color: $color_text_hover;
+
+  transition: background-color .5s ease-out;
+
+@extend %text;
 }
-.examples:hover{
-    cursor: pointer;
-    color: $color_text;
+.examples:hover {
+  color: $color_text;
+
+  cursor: pointer;
 }
 
-
+.speakIt_background {
+  background: url(/src/assets/images/speak_it-background.jpg) rgb(124, 123, 123);
+  background-position-x: center;
+}
+.main {
+  padding: 0;
+}
+.speakIt {
+  display: block!important;
+}
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-    .image{
-        width: 85vw;
-        height: 59vw;
-        background-size: 85vw 59vw;
-    }
+  .image {
+    width: 85vw;
+    height: 59vw;
+
+    background-size: 85vw 59vw;
+  }
 }
+
