--- a/src/sass/components/speak_it/speak_it-modals.scss
+++ b/src/sass/components/speak_it/speak_it-modals.scss
@@ -1,80 +1,99 @@
 @import "speak_it-constants";
-.modal_container{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 3;
-    justify-content: center;
-    align-items: flex-start;
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 100%;
-    padding: 160px 16px 16px;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 0;
+.modal_container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  padding: 160px 0 0 0;
+
+  background-color: rgba(0, 0, 0, .6);
+  border-radius: 0;
 }
 
-.modal_window{
-    
-    z-index: 5;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 398px;
-    padding: 36px 0 22px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.16);
+.modal_window {
+  z-index: 5;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 398px;
+  margin: auto;
+  padding: 36px 0 22px;
+
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 1px 0 2px 0 rgba(0, 0, 0, .16);
 }
-.modal_statistic{
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: cornsilk;
-    z-index: 4;
+.modal_statistic {
+  position: fixed;
+  top: 60px;
+  right: 0;
+
+/* bottom: 0; */
+  left: 0;
+  z-index: 4;
+
+  width: 480px;
+  min-height: 400px;
+
+  text-align: center;
+
+/* height: 65%; */
+
+  background-color: cornsilk;
 }
-.modal_view{
-    padding: 10px 2vw;
-    margin-top: 20px;
+
+.modal_statistic > h2 {
+  margin: 5px 0;
 }
-.modal_close{
-    padding: 10px 2vw;
-    margin-top: 20px;
+.modal_statistic > p {
+  margin: 2px 0;
 }
-.modal_cancel{
-    padding: 10px 2vw;
-    margin-top: 20px;
+.modal_view {
+  margin-top: 20px;
+  padding: 10px 2vw;
+}
+.modal_close {
+  margin-top: 20px;
+  padding: 10px 2vw;
+}
+.modal_cancel {
+  margin-top: 20px;
+  padding: 10px 2vw;
 }
 
 
 
 
 
-.app__button_view{
-    width: 250px;
-    margin-top: 48px;
-    padding: 11px 0;
-    font-weight: 600;
-    font-size: 14px;
-    border-radius: 4px;
+.app__button_view {
+  width: 250px;
+  margin-top: 48px;
+  padding: 11px 0;
+
+  font-weight: 600;
+  font-size: 14px;
+
+  border-radius: 4px;
 }
 
 
 @media only screen and (min-width: 320px) and (max-width: 700px) {
-    .modal_window {
-        width: 90vw;
-        padding: 2vw;
-    }
+  .modal_window {
+    width: 90vw;
+    margin: auto;
+    padding: 2vw;
+  }
 
-    .app__modal__box_title {
-        text-align: center;
-    }
+  .app__modal__box_title {
+    text-align: center;
+  }
 }
