--- a/src/sass/layouts/savannah-game/_gameStatModal.scss
+++ b/src/sass/layouts/savannah-game/_gameStatModal.scss
@@ -16,6 +16,7 @@
   background-color: #ffffff;
   border: 1px solid #e6e9ee;
   border-radius: 8px;
+
 @include media-tablet {
     margin: 0;
     margin-top: -50px;
@@ -45,6 +46,10 @@
     margin: 0 auto;
     margin-top: 20px;
     overflow: auto;
+
+@include media-mobile {
+      height: 270px;
+    }
     &_wrong {
       width: 100%;
 
