--- a/src/sass/layouts/savannah-game/_savannah-layout.scss
+++ b/src/sass/layouts/savannah-game/_savannah-layout.scss
@@ -58,17 +58,19 @@
     justify-content: center;
     align-items: center;
     width: 30%;
-    height: 50px;
+    min-height: 50px;
     margin-right: 20px;
+    margin-bottom: 40px;
 
     cursor: pointer;
 
+    user-select: none;
 @include media-tablet {
       position: relative;
 
       display: inline-block;
       max-width: 270px;
-      margin: 0 100px;
+      margin: 0 100px 30px;
       margin-right: 0;
 
       font-size: 2.5rem;
@@ -80,11 +82,10 @@
 
 @include media-mobile {
       justify-content: start;
-      width: 100%;
+      width: 90%;
       max-width: 320px;
       margin: 0 20px;
       margin-bottom: 8px;
-      padding: 10px 20px 13px 10px;
 
       font-size: 24px;
     }
