--- a/src/sass/components/speak_it/speak_it-navigation-container.scss
+++ b/src/sass/components/speak_it/speak_it-navigation-container.scss
@@ -65,9 +65,12 @@
   transition: background-color .2s cubic-bezier(0, -1.85, .27, 1.75);
 }
 
-.close:before,
-.close:after {
-  background-color: #000000;
+.close:before{
+  background-color: #969595;
+}
+
+.close:after{
+  background-color: rgb(255, 255, 255);
 }
 
 @media only screen and (max-width: 1050px) {
