--- a/src/sass/components/speak_it/speak_it-words_container.scss
+++ b/src/sass/components/speak_it/speak_it-words_container.scss
@@ -37,7 +37,6 @@
 }
 .word_look {
   margin-top: 10px;
-
   font-weight: initial!important;
   font-size: 16px!important;
 
@@ -49,7 +48,7 @@
   text-align: center;
 }
 .choosen {
-  background: radial-gradient(circle, rgba(174,250,242,.4) 0%, rgba(56,63,168,.5) 100%)!important;
-  border: 1px solid transparent!important;
-  box-shadow: 0 1px 1px $color_shadow!important;
+  background: radial-gradient(circle, rgba(174,250,242,.4) 0%, rgba(56,63,168,.5) 100%);
+  border: 1px solid transparent;
+  box-shadow: 0 1px 1px $color_shadow;
 }
