--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -42,12 +42,20 @@
   background: linear-gradient(rgba(8,15,26,.6) 0%, rgba(17,17,46,.3) 100%);
   border: 1px solid lightpink;
   border-radius: 8px;
+
+  & > img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+
   &__line {
     display: flex;
     width: calc(100% + 22px);
     height: 52px;
     margin-left: -20px;
     overflow: hidden;
+    min-width: 735px;
 
     border-bottom: 1px solid lightpink;
     &_active {
@@ -82,6 +90,7 @@
 
 .ep-board-wrapper {
   display: flex;
+  min-width: 750px;
 }
 
 .ep-numbers {
@@ -95,6 +104,7 @@
   margin-top: 20px;
   margin-left: 35px;
   overflow: hidden;
+  min-width: 713px;
 
   border: 1px solid lightpink;
   border-radius: 8px;
