refactor: change element for background and add scrollbar to playboard container for low resolutions

--- a/src/sass/layouts/_englishPuzzle-layout.scss
+++ b/src/sass/layouts/_englishPuzzle-layout.scss
@@ -1,10 +1,39 @@
 .english-puzzle {
+  // width: 100%;
+  &__wrapper {
+    max-width: 1200px;
+    min-height: calc(100vh - 93px);
+    margin: 0 auto;
+    padding: 0 10px;
+  }
+}
+
+.container-outer {
+  display: flex;
+}
+
+.container-inner {
+  overflow-x: scroll;
+  border-radius: 8px;
   width: 100%;
+  &::-webkit-scrollbar {
+    width: 1em;
+  }
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 8px;
+  }
 }
 
 .ep-background {
   background: linear-gradient(rgba(8,15,26,.2) 0%, rgba(17,17,46,.5) 100%) center center/cover fixed,url(/src/assets/images/ep-images/ep-background.jpg) center center no-repeat fixed;
   background-size: cover;
+  min-width: 100vw;
+  height: calc(100vh - 93px);
 }
 
 .ep-controls {
@@ -102,7 +131,7 @@
 .ep-wrapper {
   width: calc(100% - 35px);
   margin-top: 20px;
-  margin-left: 35px;
+  // margin-left: 35px;
   overflow: hidden;
   min-width: 713px;
 
@@ -157,8 +186,8 @@
   font-size: 2rem;
   line-height: 3rem;
   color: white;
-  &:last-child {
-    margin-left: 20px;
+  &:first-child {
+    margin-right: 20px;
   }
 }
 
