--- a/src/sass/layouts/_englishPuzzle-startLayout.scss
+++ b/src/sass/layouts/_englishPuzzle-startLayout.scss
@@ -29,9 +29,10 @@
 }
 
 .ep-startScreen {
-  position: relative;
+  // position: relative;
 
-  width: 100%;
+  // width: 100vw;
+  // height: 100vh;
   &__header {
     position: sticky;
     top: 0;
