--- a/src/sass/layouts/savannah-game/_gameStatModal.scss
+++ b/src/sass/layouts/savannah-game/_gameStatModal.scss
@@ -124,6 +124,9 @@
   align-items: center;
   width: 100%;
   margin-top: 16px;
+  @include media-mobile {
+    margin-top: 0;
+  }
 }
 
 .soundBox {
